--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -140,3 +140,145 @@
 #msg-box8-18 p {
   color: #fff;
 }
+#menu-17 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-17 .navbar-caption {
+  color: #ffffff;
+}
+#menu-17 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-17 .link,
+#menu-17 .dropdown-item {
+  color: #ffffff;
+}
+#menu-17 .link {
+  font-size: 0.75rem;
+}
+#menu-17 .dropdown-item,
+#menu-17 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-17 .link:hover,
+#menu-17 .dropdown-item:hover,
+#menu-17 .link:focus,
+#menu-17 .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-17 .link[aria-expanded="true"],
+#menu-17 .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-17 .nav-dropdown-sm .link:focus,
+#menu-17 .nav-dropdown-sm .link:hover,
+#menu-17 .nav-dropdown-sm .dropdown-item:focus,
+#menu-17 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-17 .navbar,
+#menu-17 .nav-dropdown-sm,
+#menu-17 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-17 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-17 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-17 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-17 .bg-color.transparent.opened .link:hover,
+#menu-17 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-17 .link[aria-expanded="true"],
+#menu-17 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#menu-17.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-17 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-17 .close-icon::before,
+#menu-17 .close-icon::after {
+  background-color: #ffffff;
+}
+#msg-box8-19 .mbr-section-title,
+#msg-box8-19 p {
+  color: #fff;
+}
+#menu-35 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-35 .navbar-caption {
+  color: #ffffff;
+}
+#menu-35 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-35 .link,
+#menu-35 .dropdown-item {
+  color: #ffffff;
+}
+#menu-35 .link {
+  font-size: 0.75rem;
+}
+#menu-35 .dropdown-item,
+#menu-35 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-35 .link:hover,
+#menu-35 .dropdown-item:hover,
+#menu-35 .link:focus,
+#menu-35 .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-35 .link[aria-expanded="true"],
+#menu-35 .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-35 .nav-dropdown-sm .link:focus,
+#menu-35 .nav-dropdown-sm .link:hover,
+#menu-35 .nav-dropdown-sm .dropdown-item:focus,
+#menu-35 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-35 .navbar,
+#menu-35 .nav-dropdown-sm,
+#menu-35 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-35 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-35 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-35 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-35 .bg-color.transparent.opened .link:hover,
+#menu-35 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-35 .link[aria-expanded="true"],
+#menu-35 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#menu-35.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-35 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-35 .close-icon::before,
+#menu-35 .close-icon::after {
+  background-color: #ffffff;
+}
+#header3-38 .mbr-section-title,
+#header3-38 .mbr-section-subtitle {
+  text-align: center;
+}
